--- a/ecard/appsettings.json
+++ b/ecard/appsettings.json
@@ -1,4 +1,16 @@
 ﻿{
+
+  ////WOWOCO: THIS IS THE PATH OR ROOT SO CREATE YOUR FOLDER AND THEN CONNECT IT, ADD THE PATHWAY HERE
+  ////IT WILL KNOW WHAT TO NAME IT AND WHERE IT IS.
+  "myDB": "Filename=./db/mydatabase.db",
+
+  //my secert and public keys
+  "Recaptcha": {
+    "PrivateKey": "6Le5_S0UAAAAADVyjgJOG_4ptTimv71jLTGh8ZI0",
+    "PublicKey": "6Le5_S0UAAAAANukdP7UkKR2isiirPXw7DPcZwCb"
+  },
+
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
