--- a/ecard/appsettings.json
+++ b/ecard/appsettings.json
@@ -1,15 +1,33 @@
-﻿{
+﻿//{
 
-  ////WOWOCO: THIS IS THE PATH OR ROOT SO CREATE YOUR FOLDER AND THEN CONNECT IT, ADD THE PATHWAY HERE
-  ////IT WILL KNOW WHAT TO NAME IT AND WHERE IT IS.
-  "myDB": "Filename=./db/mydatabase.db",
+//  ////WOWOCO: THIS IS THE PATH OR ROOT SO CREATE YOUR FOLDER AND THEN CONNECT IT, ADD THE PATHWAY HERE
+//  ////IT WILL KNOW WHAT TO NAME IT AND WHERE IT IS.
+//  "myDB": "Filename=./db/mydatabase.db",
 
-  //my secert and public keys
+//  //my secert and public keys
+//  "Recaptcha": {
+//    "PrivateKey": "6Le5_S0UAAAAADVyjgJOG_4ptTimv71jLTGh8ZI0",
+//    "PublicKey": "6Le5_S0UAAAAANukdP7UkKR2isiirPXw7DPcZwCb"
+//  },
+
+
+//  "Logging": {
+//    "IncludeScopes": false,
+//    "LogLevel": {
+//      "Default": "Warning"
+//    }
+//  }
+//}
+
+
+{
+  // WOWOCO: /db/ is the physical folder from the root and mydatabase.db is the physical file of the SQL Lite database
+  "MyDB": "Filename=./db/mydatabase.db",
+
   "Recaptcha": {
-    "PrivateKey": "6Le5_S0UAAAAADVyjgJOG_4ptTimv71jLTGh8ZI0",
-    "PublicKey": "6Le5_S0UAAAAANukdP7UkKR2isiirPXw7DPcZwCb"
+    "PrivateKey": "[[WOWOCO: ENTER YOUR RECAPTCHA SECRET KEY]]",
+    "PublicKey": "[[WOWOCO: ENTER YOUR RECAPTCHA PUBLIC KEY]]"
   },
-
 
   "Logging": {
     "IncludeScopes": false,
@@ -17,4 +35,7 @@
       "Default": "Warning"
     }
   }
+
+
+
 }
